--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 ### Python template
-# Byte-compiled / optimized / DLL files
-__pycache__/
 *.py[cod]
-*$py.class
 
 # C extensions
 *.so
@@ -24,57 +21,23 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+__pycache__/
 
 # Installer logs
 pip-log.txt
-pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
 .tox/
 .coverage
-.coverage.*
-.cache
 nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
 
 # Translations
 *.mo
-*.pot
 
-# Django stuff:
-# *.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# IPython Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
 
 # dotenv
 .env
@@ -83,17 +46,9 @@ celerybeat-schedule
 venv/
 ENV/
 
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
 
 .idea/
-migrations/
 app.sqlite
-db_repository/
-tmp/associations/
-tmp/nonces/
-tmp/temp/
+microblog.log*
+
 
